# djangoquick

./: .gitignore  pyproject.toml
app/authenticate/: admin.py  apps.py  models.py
app/authenticate/migrations/: 0001_initial.py
app/core/: settings.py
